2007-10-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/support-de.htm4: Fixed a typo.

2007-09-27  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/support.htm4, website/support-de.htm4: New. A
	description on where to get professional support for Gpg4win.

	* website/template_link_boxes_de.m4,s
	website/template_link_boxes_en.m4: Added link to new support page.

2007-09-11  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/einsteiger.tex: Fix to have webversion work again.

2007-09-11  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/what-is-gpg4win.tex, manual/was-ist-gpg4win.tex: Minor changes.

2007-09-10  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/novices.tex: Some minor improvements. By Geo Kocheril.

2007-09-07  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-history.awk: Added a link for each release to
	offer the download of this past release.

	* website/download.htm4, website/download-de.htm4: Added section
	about change history and where to find old releases.

2007-09-07  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-installer-on-w32-debian-screenshots.htm4: Updated
	to english screenshot series.

	* website/pix/debian-install-en/: New. Directory with various
	screenshots and thumbnails. English.

2007-09-06  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-installer-on-vm.htm4,
	website/build-installer-on-w32-debian-screenshots.htm4: Completed
	english translation. Base work by Geo Kocheril.

2007-09-04  Bernhard Reiter <bernhard.reiter@intevation.de>

	* website/index-de.htm4: Fixed typo kontinuerlich. Thanks
	to Jens Kubieziel for finding it.

2007-08-30  Marcus Brinkmann  <marcus@g10code.de>

	* website/localize-gpg4win.htm4: Add GpgEX instructions, fix some
	grammar.

	* manual/einsteiger.tex (Automatische Installation von Gpg4win),
	README.de.txt, README.en.txt: Add inst_gpgex key.
