@@ -1,5 +1,10 @@
 2007-10-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>
 
+	* website/template_link_boxes_de.m4,
+	website/template_link_boxes_en.m4: Added link to Enigmail.
+
+2007-10-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>
+
 	* website/support-de.htm4: Fixed a typo.
 
 2007-09-27  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>
@@ -7,7 +12,7 @@
 	* website/support.htm4, website/support-de.htm4: New. A
 	description on where to get professional support for Gpg4win.
 
-	* website/template_link_boxes_de.m4,s
+	* website/template_link_boxes_de.m4,
 	website/template_link_boxes_en.m4: Added link to new support page.
 
 2007-09-11  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>
